--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@
     <!-- 連結Bootstrap.min.css -->
 
     <!-- TODO: 客製化Bootstrap CSS -->
-    <link rel="stylesheet" href="./css/bootstrap.css">
+    <link rel="stylesheet" href="/tickets/css/bootstrap.css">
 
     <!-- 使用font awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css"
@@ -24,7 +24,7 @@
 
 
     <!-- 使用style.css -->
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="/tickets/css/index.css">
     <!-- 引入 flatpickr 的 CSS 文件 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 
@@ -397,8 +397,16 @@
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
     <!-- 連結網頁主程式 -->
-    <script src="./js/main.js"></script>
-    <script src="./js/new_articleA.js"></script>
+    <script src="/tickets/js/main.js"></script>
+  <script src="/tickets/js/new_articleA.js"></script>
+  <script src="/tickets/js/new_articleAA.js"></script>
+  <script src="/tickets/js/new_articleB+AA.js"></script>
+  <script src="/tickets/js/new_articleB.js"></script>
+  <script src="/tickets/js/new_articleC+CC.js"></script>
+  <script src="/tickets/js/new_articleC.js"></script>
+  <script src="/tickets/js/new_articleCCC.js"></script>
+  <script src="/tickets/js/test2.js"></script>
+  
 
     <!-- 引入 flatpickr 的 JavaScript 文件 -->
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
