--- a/old_ticket-page.html
+++ b/old_ticket-page.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>金廈海運-訂票</title>
-    <!-- <link rel="icon shortcut" href="./img/favicon.ico"> -->
+    <!-- <link rel="icon shortcut" href="/tickets/img/favicon.ico"> -->
     <!-- 引用https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <!-- Bootstrap官方網站 https://getbootstrap.com/ -->
     <!-- 連結Bootstrap.min.css -->
 
     <!-- TODO: 客製化Bootstrap CSS -->
-    <link rel="stylesheet" href="./css/bootstrap-ticket.css">
+    <link rel="stylesheet" href="/tickets/css/bootstrap-ticket.css">
     <!-- Bootstrap and jQuery libraries -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!-- <script src="//maxcdn.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.min.js"></script> -->
@@ -23,7 +23,7 @@
         integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- 使用style2.css -->
-    <link rel="stylesheet" href="./css/booking.css">
+    <link rel="stylesheet" href="/tickets/css/booking.css">
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/cheatsheet/">
 
@@ -150,7 +150,7 @@
 
             <div>
                 <h1 class="loader ">
-                    <img src="./img/金廈海運logo-removebg.png" alt="金廈海運logo" class="w-10">
+                    <img src="/tickets/img/金廈海運logo-removebg.png" alt="金廈海運logo" class="w-10">
                     <span class="m">訂</span>
                     <span class="m">&nbsp;</span>
                     <span class="m">票</span>
@@ -169,7 +169,7 @@
         </div>
 
         <div class="container">
-            <img id="ship-bottle" class="rounded-circle mt  my-element" src="img/瓶中船.png" alt="user photo"
+            <img id="ship-bottle" class="rounded-circle mt  my-element" src="/tickets/img/瓶中船.png" alt="user photo"
                 style="width: 50%; margin-bottom: 20%;">
             <!-- <a class="btn btn-outline-primary" href="">Link</a> -->
         </div>
@@ -574,12 +574,12 @@
                                                 </div>
                                             </section>
                                             <!-- gallerySection end -->
-                                            <!-- <img src="./img/gallery-image-1.jpg" alt="" class="w-100"> -->
+                                            <!-- <img src="/tickets/img/gallery-image-1.jpg" alt="" class="w-100"> -->
                                         </div>
 
                                         <!-- page 2 -->
                                         <div class="carousel-item">
-                                            <!-- <img src="./img/gallery-image-2.jpg" alt="" class="w-100"> -->
+                                            <!-- <img src="/tickets/img/gallery-image-2.jpg" alt="" class="w-100"> -->
                                             <h2>A線：海上巡航賞景-2</h2>
                                             <div class="row">
 
@@ -600,7 +600,7 @@
 
                                         <!-- page 3 -->
                                         <div class="carousel-item">
-                                            <!-- <img src="./img/gallery-image-2.jpg" alt="" class="w-100"> -->
+                                            <!-- <img src="/tickets/img/gallery-image-2.jpg" alt="" class="w-100"> -->
                                             <h2>B線：海上巡航賞景-1</h2>
                                             <div class="row">
 
@@ -625,7 +625,7 @@
 
                                         <!-- page 4 -->
                                         <div class="carousel-item">
-                                            <!-- <img src="./img/gallery-image-2.jpg" alt="" class="w-100"> -->
+                                            <!-- <img src="/tickets/img/gallery-image-2.jpg" alt="" class="w-100"> -->
                                             <h2>B線：海上巡航賞景-2</h2>
                                             <div class="row">
 
@@ -1063,14 +1063,14 @@
     integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
     crossorigin="anonymous"></script> -->
     <!-- 連結網頁主程式 -->
-    <script src="./js/main.js"></script>
-    <script src="./js/new_articleA.js"></script>
-    <script src="./js/new_articleAA.js"></script>
-    <script src="./js/new_articleB+AA.js"></script>
-    <script src="./js/new_articleB.js"></script>
-    <script src="./js/new_articleC+CC.js"></script>
-    <script src="./js/new_articleC.js"></script>
-    <script src="./js/new_articleCCC.js"></script>
+    <script src="/tickets/js/main.js"></script>
+    <script src="/tickets/js/new_articleA.js"></script>
+    <script src="/tickets/js/new_articleAA.js"></script>
+    <script src="/tickets/js/new_articleB+AA.js"></script>
+    <script src="/tickets/js/new_articleB.js"></script>
+    <script src="/tickets/js/new_articleC+CC.js"></script>
+    <script src="/tickets/js/new_articleC.js"></script>
+    <script src="/tickets/js/new_articleCCC.js"></script>
 
 
 
