--- a/test2.html
+++ b/test2.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 
   <!-- TODO: 客製化Bootstrap CSS -->
-  <link rel="stylesheet" href="./css/bootstrap.css">
+  <link rel="stylesheet" href="/tickets/css/bootstrap.css">
 
   <!-- Bootstrap CSS -->
   <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"> -->
@@ -28,7 +28,7 @@
 
 
   <!-- 使用style.css -->
-  <link rel="stylesheet" href="./css/test2.css">
+  <link rel="stylesheet" href="/tickets/css/test2.css">
   <!-- 使用日期輪用 -->
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   <link href="./lib/owlcarousel/owlcarousel/owl.carousel.min.js" rel="stylesheet">
@@ -70,7 +70,7 @@
 
       <div>
         <h1 class="loader ">
-          <img src="./img/金廈海運logo-removebg.png" alt="金廈海運logo" class="w-10">
+          <img src="/tickets/img/金廈海運logo-removebg.png" alt="金廈海運logo" class="w-10">
           <span class="m">訂</span>
           <span class="m">&nbsp;</span>
           <span class="m">票</span>
@@ -85,7 +85,7 @@
     </div>
 
     <div class="container">
-      <img id="ship-bottle" class="rounded-circle mt  my-element" src="img/瓶中船.png" alt="user photo"
+      <img id="ship-bottle" class="rounded-circle mt  my-element" src="/tickets/img/瓶中船.png" alt="user photo"
         style="width: 50%; margin-bottom: 20%;">
       <!-- <a class="btn btn-outline-primary" href="">Link</a> -->
     </div>
@@ -187,7 +187,7 @@
                         </h1>
 
                         <div class="table-responsive text-green">
-                          <form id="contact" action="" method="get" style="background-image: url(../img/contact-form-bg.png);">
+                          <form id="contact" action="" method="get" style="background-image: url(/tickets/img/contact-form-bg.png);">
                             <!-- 愛心票 -->
                             <table>
                               <div id="planpickered" class="mt-4 pt-3 pb-1" style="background-color: rgba(244, 246, 247, 0.632);">
@@ -449,7 +449,7 @@
                         </h1>
 
                         <div class="table-responsive text-green">
-                          <form id="contact" action="" method="get" style="background-image: url(../img/contact-form-bg.png);">
+                          <form id="contact" action="" method="get" style="background-image: url(/tickets/img/contact-form-bg.png);">
                             
                             <table>
                               <div id="planpickered" class="mt-4 pt-3 pb-1" style="background-color: rgba(244, 246, 247, 0.632);">
@@ -1025,15 +1025,16 @@
     integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
     crossorigin="anonymous"></script> -->
   <!-- 連結網頁主程式 -->
-  <script src="./js/main.js"></script>
-  <script src="./js/new_articleA.js"></script>
-  <script src="./js/new_articleAA.js"></script>
-  <script src="./js/new_articleB+AA.js"></script>
-  <script src="./js/new_articleB.js"></script>
-  <script src="./js/new_articleC+CC.js"></script>
-  <script src="./js/new_articleC.js"></script>
-  <script src="./js/new_articleCCC.js"></script>
-  <script src="./js/test2.js"></script>
+ 
+  <script src="/tickets/js/main.js"></script>
+  <script src="/tickets/js/new_articleA.js"></script>
+  <script src="/tickets/js/new_articleAA.js"></script>
+  <script src="/tickets/js/new_articleB+AA.js"></script>
+  <script src="/tickets/js/new_articleB.js"></script>
+  <script src="/tickets/js/new_articleC+CC.js"></script>
+  <script src="/tickets/js/new_articleC.js"></script>
+  <script src="/tickets/js/new_articleCCC.js"></script>
+  <script src="/tickets/js/test2.js"></script>
   
  
 
