--- a/order.html
+++ b/order.html
@@ -520,7 +520,7 @@
                                       <div class="col-lg-6 col-md-12  col-sm-12  mt-3"
                                         style="padding-left: 5%; padding-right: 5%;">
 
-                                        <div class="row justify-content-start"
+                                        <!-- <div class="row justify-content-start"
                                           style="padding-left: 30%; padding-right: 10%;">
 
                                           <div
@@ -534,7 +534,7 @@
 
                                           </div>
 
-                                        </div>
+                                        </div> -->
 
                                         <div class="table-responsive justify-content-center">
                                           <table class=" text-center text-primary ">
@@ -570,6 +570,7 @@
                                             </thead>
                                           </table>
                                         </div>
+
                                       </div>
 
                                       <!-- 訂單開立方式 -->
