變更送出後產生的格式

--- a/order.html
+++ b/order.html
@@ -374,13 +374,14 @@
 
 
 
-                    <div class="container text-white">
+                    <section class="container text-white" id="buyers_list">
+                      <div  id="buyers_list">
 
-                      <aside class="bd-aside sticky-xl-top text-body-secondary align-self-start mb-3 mb-xl-5 px-2">
+                      <!-- <aside class="bd-aside sticky-xl-top text-body-secondary align-self-start mb-3 mb-xl-5 px-2">
                         <h3 class="mt-5 pb-3 mb-4 border-bottom">資料填寫</h3>
                         <h5 class=" pb-3 mb-4 ">(請下拉選單)</h5>
                         <nav class="small" id="toc">
-                          <ul class="list-unstyled" id="buyers_list">
+                          <ul class="list-unstyled" > -->
 
                             <!-- 用JS產生 旅客資料 -->
                             <li class="my-2">
@@ -923,19 +924,20 @@
                                 </li> -->
                             <!-- 用JS產生內容 -->
 
-                          </ul>
+                          <!-- </ul>
                           <div class="col-lg-12 ">
                             <button class="main-button pt-3" id="form_send">
                               <h3>送出</h3>
                             </button>
                           </div>
                         </nav>
-                      </aside>
+                      </aside> -->
 
 
                      
 
                     </div>
+                    </section>
                   </div>
               </div>
             </div>
