--- a/ticketsPage.html
+++ b/ticketsPage.html
@@ -770,7 +770,7 @@
           <div id="planpickered" class="pt-5 pb-5 col-md-12 col-lg-12  text-center"
             style="background: rgb(102, 235, 226)">
             <label for="plan">
-              <h1 class="section-title mb-5">主要訂票人資料顯示</h1>
+              <h1 class="section-title mb-5">訂單詳細資料顯示</h1>
 
               <p class="article-p" id="Modal-orderNum">訂單編號：</p>
               <p class="article-p" id="Modal-pno">航班代碼：</p>
