頁頭span字體修改成 RWd增加帶入的選擇時間

--- a/pay_success.html
+++ b/pay_success.html
@@ -226,7 +226,7 @@
                                                                                         <form id="contact"
                                                                                             class="get_form bg-light ">
                                                                                             <h2 id="contact"
-                                                                                                class=" section-title mb-3 text-center text-primary ">
+                                                                                                class=" section-title mb-3 text-center text-primary">
                                                                                                 付款細項</h2>
                                                                                             <div
                                                                                                 class="table-responsive ">
@@ -426,7 +426,7 @@
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
     <!-- 連結網頁主程式 -->
-    <script src="/tickets/js/order.js"></script>
+    <script src="/tickets/js/pay_success.js"></script>
 
 
 
