--- a/refund.html
+++ b/refund.html
@@ -101,7 +101,7 @@
 
               <nav class="nav nav-pills flex-row justify-content-center" id="myNav">
                 <button class="nav-link btn btn-outline-primary" onclick="articleBtn('articleA')">退票</button>
-                <button class="nav-link btn btn-outline-primary" onclick="articleBtn('articleD')">test</button>
+                <!-- <button class="nav-link btn btn-outline-primary" onclick="articleBtn('articleD')">test</button> -->
               </nav>
 
               <div class="col-12">
@@ -208,7 +208,7 @@
                       </article>
 
 
-                      <article id="articleD" class="my-3  tab-pane " style="background: rgb(102, 235, 226)">
+                      <!-- <article id="articleD" class="my-3  tab-pane " style="background: rgb(102, 235, 226)">
                         <div class="container text-white my-3 pb-5  bg-secondary">
                           <aside class="bd-aside sticky-xl-top text-body-secondary align-self-start mb-3 mb-xl-5 px-2">
                             <h2 class="h6 pt-4 pb-3 mb-4 border-bottom">購票人資料填寫(請下拉選單)</h2>
@@ -292,7 +292,6 @@
                                   </ul>
                                 </li>
 
-                                <!-- 內部隱藏 -->
 
                                 <li class="my-2">
                                   <button class="btn d-inline-flex align-items-center collapsed border-0"
@@ -458,12 +457,12 @@
                                     </div>
                                   </ul>
                                 </li>
-                                <!-- 內部隱藏 -->
+                                
                               </ul>
                             </nav>
                           </aside>
                         </div>
-                      </article>
+                      </article> -->
 
 
                     </div>
