--- a/pay_fail.html
+++ b/pay_fail.html
@@ -200,7 +200,7 @@
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
     <!-- 連結網頁主程式 -->
-    <script src="/tickets/js/order.js"></script>
+    <script src="/tickets/js/pay_success.js"></script>
 
 
 
